src/css/custom.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Gruppo&family=Rubik:ital,wght@0,400;0,800;1,400;1,800&display=swap');

body {
  font-family: "Rubik", sans-serif;
}

html {
  scroll-behavior: smooth;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Rubik", sans-serif;
}

h2 {
  font-family: "Gruppo", sans-serif;
  text-align: center;
}

p {
  font-family: "Rubik", sans-serif;
}

em {
  font-weight: 800;
}

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #7030a0;
  --ifm-color-primary-dark: #5c2986;
  --ifm-color-primary-darker: #52257a;
  --ifm-color-primary-darkest: #451f6b;
  --ifm-color-primary-light: #803fbb;
  --ifm-color-primary-lighter: #8c4ac4;
  --ifm-color-primary-lightest: #9a57ce;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --ifm-heading-font-weight: 400;
  --ifm-heading-margin-bottom: 1rem;

  /* Define primary color and its alternatives */
  --ifm-color-secondary: #ffcc00;
  --ifm-color-secondary-dark: #ffb200;
  --ifm-color-secondary-darker: #ffa000;
  --ifm-color-secondary-darkest: #ff8800;
  --ifm-color-secondary-light: #ffdd33;
  --ifm-color-secondary-lighter: #ffe644;
  --ifm-color-secondary-lightest: #fff066;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #ffcc00;
  --ifm-color-primary-dark: #ffb200;
  --ifm-color-primary-darker: #ffa000;
  --ifm-color-primary-darkest: #ff8800;
  --ifm-color-primary-light: #ffdd33;
  --ifm-color-primary-lighter: #ffe644;
  --ifm-color-primary-lightest: #fff066;

  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);

  /* Use the secondary color and its alternatives in dark mode */
  --ifm-color-secondary: #7030a0;
  --ifm-color-secondary-dark: #5c2986;
  --ifm-color-secondary-darker: #52257a;
  --ifm-color-secondary-darkest: #451f6b;
  --ifm-color-secondary-light: #803fbb;
  --ifm-color-secondary-lighter: #8c4ac4;
  --ifm-color-secondary-lightest: #9a57ce;
}

section {
  padding: 50px;
  scroll-margin-top: 40px;
}

/* Navbar Button */
#navbar-button {
  background-color: var(--ifm-color-primary);
  color: var(--ifm-color-secondary);
  padding: 10px 15px;
  border-radius: 5px;
  text-decoration: none;
  cursor: pointer;
}

#navbar-button:hover {
  background-color: var(--ifm-color-primary-light);
}

/* Hero section */

.hero__subtitle {
  color: var(--ifm-navbar-link-color);
}

/* Navbar link settings */
.navbar {
  height: 80px;
}

.navbar__item.navbar__link:hover {
  color: var(--ifm-color-primary);
}

a.navbar__item:hover {
  color: var(--ifm-color-secondary);
}

/* Mobile menu */
.menu__link--active:not(.menu__link--sublist) {
  background-color: transparent;
}
/* This is done because active link will change color based on active, all #ids are on the same page - so all will be active at all times */
.navbar__link--active {
  color: var(--unexisting-color);
}

[data-theme="dark"] .navbar__link--active {
  color: var(--unexisting-color);
}

/* Wopee logo invert on theme change */
[data-theme="dark"] .navbar__logo img {
  filter: invert(1);
}

/* Footer */

.footer {
  background-color: var(--ifm-color-primary);
  color: #fff;
}

[data-theme="dark"] .footer {
  background-color: var(--ifm-color-secondary);
  color: #fff;
}

.footer a {
  color: white;
}

.footer a:hover {
  color: white;
}

.wopee-io::first-letter {
  font-family: Bungee;
}

.wopee-io {
  font-family: Rubik;
  font-weight: 800;
  display:inline-block;
}

